--- a/src/index.css
+++ b/src/index.css
@@ -164,3 +164,12 @@ input:focus, select:focus {
   background: var(--light-cyan) !important;
   border-radius: 6px !important;
 }
+
+.react-datepicker-popper {
+  z-index: 10000 !important;
+}
+
+#react-datepicker-portal {
+  position: relative;
+  z-index: 10000;
+}
